testsuite/poke.pkl/int-type-diag-1.pk
/* { dg-do compile } */

type foo = int<0>; /* { dg-error "" } */
